# openssl-ecjpake

./: .gitignore  CMakeLists.txt  ecjpaketest.c
openssl/: ecjpake.h
